cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
project(ansema)
if(NOT MSVC)
    target_link_options(ansema PRIVATE -mwindows)
else()
	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
endif()
add_executable(ansema main.cpp)
add_subdirectory(ext/cryptopp)
target_link_libraries(ansema cryptopp-static)
add_subdirectory(ext/nana)
target_link_libraries(ansema nana)
target_include_directories(ansema PRIVATE ext)
target_compile_features(ansema PRIVATE cxx_std_17)
